Firestore code tracing but I think the main issue here is actually memory NOT performance.

--- a/packages/polar-bookshelf/apps/repository/debug.html
+++ b/packages/polar-bookshelf/apps/repository/debug.html
@@ -100,6 +100,8 @@
 
   </body>
 
+  <script src="/apps/service-worker-registration.js"></script>
+
   <!-- TODO: migrate service-worker-registration.js into our main bundle -->
   <script src="/debug-bundle.js"></script>
 
